test_scores/negative_dimers/features/P62318.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P62318.pkl.xz